# public_projects

./: WORKSPACE.bazel
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
projects/cpp_battle/: BUILD.bazel  main.cpp  pokemon.hpp  pokemon_test.cpp
projects/cpp_calculator_lib/: BUILD.bazel  calculator.cpp  calculator.hpp  calculator_test.cpp
projects/cpp_helloworld/: BUILD.bazel  main.cpp
