cc_library(
    name = "calculator",
    srcs = [
        "calculator.cpp",
        "calculator.hpp",
    ],
    hdrs = ["calculator.hpp"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "calculator_test",
    size = "small",
    srcs = ["calculator_test.cpp"],
    deps = [
        "//projects/cpp_calculator_lib:calculator",
        "@com_google_googletest//:gtest_main",
    ],
)